--- a/frontend/src/app/pages/server-info/overview/overview.component.html
+++ b/frontend/src/app/pages/server-info/overview/overview.component.html
@@ -21,11 +21,15 @@
   {{ basePredictor?.storageUri }}
 </lib-details-list-item>
 
-<lib-details-list-item key="Runtime">
-  {{ predictorType }} {{ basePredictor.runtimeVersion }}
+<lib-details-list-item key="Predictor">
+  {{ predictorType }}
 </lib-details-list-item>
 
-<lib-details-list-item key="Protocol Version">
+<lib-details-list-item key="Runtime" *ngIf="basePredictor?.runtimeVersion">
+  {{ basePredictor.runtimeVersion }}
+</lib-details-list-item>
+
+<lib-details-list-item key="Protocol Version" *ngIf="basePredictor?.protocolVersion">
   {{ basePredictor.protocolVersion }}
 </lib-details-list-item>
 
