Add details about transformer container

--- a/frontend/src/app/pages/server-info/details/transformer/transformer.component.html
+++ b/frontend/src/app/pages/server-info/details/transformer/transformer.component.html
@@ -3,3 +3,6 @@
 
 <!--Component Extension-->
 <app-component-extension [ext]="transformerSpec"></app-component-extension>
+
+<!--Container-->
+<app-container-details [container]="transformerSpec.containers[0]"></app-container-details>
