Implement editing model servers
Signed-off-by: Mark Winter <mark.winter@navercorp.com>

--- a/frontend/src/app/pages/server-info/server-info.component.html
+++ b/frontend/src/app/pages/server-info/server-info.component.html
@@ -5,6 +5,7 @@
     [backButton]="true"
     (back)="navigateBack()"
     class="margin-bottom"
+    i18n-title
   >
   </lib-title-actions-toolbar>
 
@@ -27,8 +28,14 @@
         </div>
       </div>
 
+      <ng-container *ngIf="isEditing">
+        <app-edit [isvc]="editingIsvc" (cancelEdit)="cancelEdit()">
+        </app-edit>
+      </ng-container>
+
       <!--tabs-->
       <mat-tab-group
+        *ngIf="!isEditing"
         class="page-placement"
         dynamicHeight
         animationDuration="0ms"
