--- a/frontend/src/app/pages/server-info/server-info.component.html
+++ b/frontend/src/app/pages/server-info/server-info.component.html
@@ -5,6 +5,7 @@
     [backButton]="true"
     (back)="navigateBack()"
     class="margin-bottom"
+    i18n-title
   >
   </lib-title-actions-toolbar>
 
