fix: maximum batch latency of model server details
Signed-off-by: Wangyu Han <han.wgyu@gmail.com>

--- a/frontend/src/app/pages/server-info/details/shared/component-extension/component-extension.component.html
+++ b/frontend/src/app/pages/server-info/details/shared/component-extension/component-extension.component.html
@@ -43,7 +43,7 @@
   *ngIf="ext.batcher?.maxLatency"
   key="Maximum batch latency"
 >
-  {{ ext.batcher?.maxBatchSize }}
+  {{ ext.batcher?.maxLatency }}
 </lib-details-list-item>
 
 <lib-details-list-item *ngIf="ext.batcher?.timeout" key="Timeout of batcher">
