mwa(front): Link to VWA details page from MWA details page
Link to a Volume details page from the Storage URI in overview and
details tab, only when it links to a PVC.

Signed-off-by: Orfeas Kourkakis <orfeas@arrikto.com>

--- a/frontend/src/app/pages/server-info/details/details.component.html
+++ b/frontend/src/app/pages/server-info/details/details.component.html
@@ -42,6 +42,7 @@
 
   <app-predictor-details
     [predictorSpec]="svc.spec.predictor"
+    [namespace]="namespace"
   ></app-predictor-details>
 
   <!--transformer-->
