--- a/frontend/src/app/pages/server-info/overview/overview.component.html
+++ b/frontend/src/app/pages/server-info/overview/overview.component.html
@@ -18,7 +18,10 @@
 </lib-details-list-item>
 
 <lib-details-list-item *ngIf="basePredictor?.storageUri" key="Storage URI">
-  {{ basePredictor?.storageUri }}
+  <app-storage-uri
+    [namespace]="namespace"
+    [basePredictor]="basePredictor"
+  ></app-storage-uri>
 </lib-details-list-item>
 
 <lib-details-list-item key="Predictor">
