mwa(front): Fix Runtime property in Details tab
Fix predictor's runtime property in Details tab. Now both runtime and
runtime version values are displayed.

Signed-off-by: Elena Zioga <elena@arrikto.com>

--- a/frontend/src/app/pages/server-info/details/predictor/predictor.component.html
+++ b/frontend/src/app/pages/server-info/details/predictor/predictor.component.html
@@ -9,7 +9,14 @@
   {{ predictorType }}
 </lib-details-list-item>
 
-<lib-details-list-item key="Runtime" *ngIf="basePredictor?.runtimeVersion">
+<lib-details-list-item key="Runtime">
+  {{ predictorRuntime }}
+</lib-details-list-item>
+
+<lib-details-list-item
+  key="Runtime Version"
+  *ngIf="basePredictor?.runtimeVersion"
+>
   {{ basePredictor.runtimeVersion }}
 </lib-details-list-item>
 
