mwa(front): Use monaco editor
Replace the old Ace editor in MWA with our new Editor component, that
wraps Monaco Editor.

Signed-off-by: Orfeas Kourkakis <orfeas@arrikto.com>

--- a/frontend/src/app/pages/server-info/server-info.component.html
+++ b/frontend/src/app/pages/server-info/server-info.component.html
@@ -62,7 +62,9 @@
           </ng-template>
         </mat-tab>
         <mat-tab label="YAML">
-          <app-yamls [svc]="inferenceService"></app-yamls>
+          <ng-template matTabContent>
+            <app-yamls [svc]="inferenceService"></app-yamls>
+          </ng-template>
         </mat-tab>
       </mat-tab-group>
     </ng-container>
