--- a/frontend/src/app/pages/server-info/yamls/yamls.component.html
+++ b/frontend/src/app/pages/server-info/yamls/yamls.component.html
@@ -1,8 +1,6 @@
-<div
-  ace-editor
+<lib-monaco-editor
   [text]="data"
+  language="yaml"
   [readOnly]="true"
-  mode="yaml"
-  theme="xcode"
-  [options]="{ maxLines: 1000 }"
-></div>
+  [height]="580"
+></lib-monaco-editor>
