frontend: Format files
Format files using npm run format:write.

Signed-off-by: Elena Zioga <elena@arrikto.com>

--- a/frontend/src/app/pages/server-info/details/predictor/predictor.component.html
+++ b/frontend/src/app/pages/server-info/details/predictor/predictor.component.html
@@ -10,7 +10,10 @@
   {{ basePredictor.runtimeVersion }}
 </lib-details-list-item>
 
-<lib-details-list-item key="Protocol Version" *ngIf="basePredictor?.protocolVersion">
+<lib-details-list-item
+  key="Protocol Version"
+  *ngIf="basePredictor?.protocolVersion"
+>
   {{ basePredictor.protocolVersion }}
 </lib-details-list-item>
 
