--- a/frontend/src/app/pages/server-info/details/shared/container/container.component.html
+++ b/frontend/src/app/pages/server-info/details/shared/container/container.component.html
@@ -23,7 +23,8 @@
 
 <lib-details-list-item
   *ngIf="container.resources?.limits && container.resources?.limits.cpu"
-  key="CPU limits">
+  key="CPU limits"
+>
   {{ container.resources?.limits.cpu }}
 </lib-details-list-item>
 
