--- a/frontend/src/app/pages/server-info/details/transformer/transformer.component.html
+++ b/frontend/src/app/pages/server-info/details/transformer/transformer.component.html
@@ -5,4 +5,6 @@
 <app-component-extension [ext]="transformerSpec"></app-component-extension>
 
 <!--Container-->
-<app-container-details [container]="transformerSpec.containers[0]"></app-container-details>
+<app-container-details
+  [container]="transformerSpec.containers[0]"
+></app-container-details>
