frontend: Rename models to endpoints
Signed-off-by: Elena Zioga <elena@arrikto.com>

--- a/frontend/src/app/pages/index/index.component.html
+++ b/frontend/src/app/pages/index/index.component.html
@@ -1,9 +1,5 @@
 <div class="lib-content-wrapper">
-  <lib-title-actions-toolbar
-    title="Model Servers"
-    [buttons]="buttons"
-    i18n-title
-  >
+  <lib-title-actions-toolbar title="Endpoints" [buttons]="buttons" i18n-title>
     <lib-namespace-select
       *ngIf="(ns.dashboardConnected$ | async) === dashboardDisconnectedState"
     ></lib-namespace-select>
