--- a/frontend/src/app/pages/server-info/details/predictor/predictor.component.html
+++ b/frontend/src/app/pages/server-info/details/predictor/predictor.component.html
@@ -18,7 +18,7 @@
 </lib-details-list-item>
 
 <lib-details-list-item
-  key="Model class name"
+  key="Endpoint class name"
   *ngIf="predictorSpec?.pytorch?.modelClassName"
 >
   {{ predictorSpec.pytorch.modelClassName }}
