--- a/frontend/src/app/pages/submit-form/submit-form.component.html
+++ b/frontend/src/app/pages/submit-form/submit-form.component.html
@@ -1,6 +1,6 @@
 <div class="lib-content-wrapper">
   <lib-title-actions-toolbar
-    title="New Model Server"
+    title="New Endpoint"
     [buttons]="[]"
     [backButton]="true"
     (back)="navigateBack()"
