--- a/frontend/src/app/pages/server-info/server-info.component.html
+++ b/frontend/src/app/pages/server-info/server-info.component.html
@@ -1,6 +1,6 @@
 <div class="lib-content-wrapper">
   <lib-title-actions-toolbar
-    title="Model server details"
+    title="Endpoint details"
     [buttons]="buttonsConfig"
     [backButton]="true"
     (back)="navigateBack()"
