mwa(front): Modify the details page
* Use the lib-status-icon component to display the status icon.
* Add an admonition with a detailed message on the current status bellow
  the ISVC's name.

Signed-off-by: Elena Zioga <elena@arrikto.com>

--- a/frontend/src/app/pages/server-info/server-info.component.scss
+++ b/frontend/src/app/pages/server-info/server-info.component.scss
@@ -23,3 +23,11 @@
 div.lib-flex-grow {
   padding-top: 1.5rem;
 }
+
+.small-padding-right {
+  padding-right: 8px;
+}
+
+.small-padding-up {
+  margin-top: 5px;
+}
