mwa(front): Add EVENTS tab to details page
Add Events tab to show the available events of an ISVC.

Signed-off-by: Elena Zioga <elena@arrikto.com>

--- a/frontend/src/app/pages/server-info/server-info.component.html
+++ b/frontend/src/app/pages/server-info/server-info.component.html
@@ -61,6 +61,11 @@
             <app-logs [svc]="inferenceService"></app-logs>
           </ng-template>
         </mat-tab>
+        <mat-tab label="EVENTS">
+          <ng-template matTabContent>
+            <app-events [svc]="inferenceService"></app-events>
+          </ng-template>
+        </mat-tab>
         <mat-tab label="YAML">
           <ng-template matTabContent>
             <app-yamls [svc]="inferenceService"></app-yamls>
