mwa: Improve how MWA exposes errors (#69)
* mwa(front): Update COMMIT file

Update COMMIT file to include the latest changes.

Signed-off-by: Elena Zioga <elena@arrikto.com>

* mwa(front): Upgrade @kubernetes/client-node module

Signed-off-by: Elena Zioga <elena@arrikto.com>

* mwa(back): Fetch ISVC's events

Extend the backend to fetch the events of an ISVC.

Signed-off-by: Elena Zioga <elena@arrikto.com>

* mwa(front): Add EVENTS tab to details page

Add Events tab to show the available events of an ISVC.

Signed-off-by: Elena Zioga <elena@arrikto.com>

* mwa(front): Extend frontend functions to better expose errors

The frontend functions follow the logic:
- Check the .status.conditions, since they have the one-liner reason and
  a message and show the first condition in order.
- If there are no conditions, show a warning icon with a message that
  explains there is no status and urge users to take a look at the events.

Signed-off-by: Elena Zioga <elena@arrikto.com>

* mwa(front): Modify the details page

* Use the lib-status-icon component to display the status icon.
* Add an admonition with a detailed message on the current status bellow
  the ISVC's name.

Signed-off-by: Elena Zioga <elena@arrikto.com>

* mwa(front): Remove status item from OVERVIEW tab

Remove status item from the Overview tab, since we've added an
admonition with a detailed message on the current status to the details
page.

Signed-off-by: Elena Zioga <elena@arrikto.com>

* mwa(front): Remove status item from DETAILS tab

Remove status item from the Details tab, since we've added an admonition
with a detailed message on the current status to the details page.

Signed-off-by: Elena Zioga <elena@arrikto.com>

* mwa(front): Fix typo

Signed-off-by: Elena Zioga <elena@arrikto.com>

---------

Signed-off-by: Elena Zioga <elena@arrikto.com>

--- a/frontend/src/app/pages/server-info/server-info.component.html
+++ b/frontend/src/app/pages/server-info/server-info.component.html
@@ -1,4 +1,4 @@
-<div class="lib-content-wrapper">
+<div class="lib-content-wrapper details-page">
   <lib-title-actions-toolbar
     title="Endpoint details"
     [buttons]="buttonsConfig"
@@ -10,21 +10,20 @@
   </lib-title-actions-toolbar>
 
   <!--scrollable page content-->
-  <div class="page-padding lib-flex-grow lib-overflow-auto">
+  <div class="details-page-outer">
     <lib-loading-spinner *ngIf="!serverInfoLoaded"></lib-loading-spinner>
 
     <ng-container *ngIf="serverInfoLoaded">
-      <div class="page-padding margin-bottom">
-        <div class="flex page-placement center">
-          <mat-icon
+      <div class="details-page-inner">
+        <div class="details-page-inner-2">
+          <lib-status-icon
             class="small-padding-right"
-            [class.warning]="statusIcon === 'warning'"
-            [class.check_circle]="statusIcon === 'check_circle'"
-          >
-            {{ statusIcon }}
-          </mat-icon>
-
+            [phase]="status.phase"
+          ></lib-status-icon>
           <div class="title">{{ serverName }}</div>
+        </div>
+        <div class="small-padding-up">
+          <lib-status-info [status]="status"></lib-status-info>
         </div>
       </div>
 
@@ -59,6 +58,11 @@
         <mat-tab label="LOGS">
           <ng-template matTabContent>
             <app-logs [svc]="inferenceService"></app-logs>
+          </ng-template>
+        </mat-tab>
+        <mat-tab label="EVENTS">
+          <ng-template matTabContent>
+            <app-events [svc]="inferenceService"></app-events>
           </ng-template>
         </mat-tab>
         <mat-tab label="YAML">
