refactored edit-component styles
Signed-off-by: LogicalGuy77 <harshitacademia@gmail.com>

--- a/frontend/src/app/pages/server-info/edit/edit.component.scss
+++ b/frontend/src/app/pages/server-info/edit/edit.component.scss
@@ -6,36 +6,11 @@ ace {
 
 .edit-component {
   margin-top: 1rem;
-}
 
-.edit-component {
-  margin-top: 1rem;
-}
-
-.edit-top-divider {
-  margin-top: 1rem;
-}
-
-.bar {
-  padding: 0.5rem 0;
-}
-
-.bar > * {
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
-.bar > button:first-child {
-  margin-left: 35%;
-}
-
-.bar > button:nth-child(2) {
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-
-.text-area > * {
-  white-space: break-spaces;
+  button[mat-raised-button][color='primary'] {
+    background-color: #1976d2;
+    color: white;
+  }
 }
 
 .waiting-button-wrapper {
