--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import '@angular/material/theming';
-@import 'kubeflow/styles/styles';
+@import 'kubeflow/src/styles/styles.scss';
 
 // Give some space after each input
 mat-form-field {
