Run linters and format code
Signed-off-by: Hijanhv <janhavichavada11@gmail.com>

--- a/frontend/src/app/pages/index/index.component.html
+++ b/frontend/src/app/pages/index/index.component.html
@@ -10,7 +10,7 @@
     <lib-table
       [config]="config"
       [data]="inferenceServices"
-      [trackByFn]="inferenceServiceTrackByFn"
+      [trackByFn]="trackInferenceService"
       (actionsEmitter)="reactToAction($event)"
     ></lib-table>
   </div>
