--- a/frontend/src/app/pages/server-info/server-info.component.html
+++ b/frontend/src/app/pages/server-info/server-info.component.html
@@ -41,7 +41,7 @@
         <mat-tab label="OVERVIEW">
           <app-overview
             *ngIf="serverInfoLoaded"
-            [svc]="inferenceService"
+            [inferenceService]="inferenceService"
             [namespace]="namespace"
             [ownedObjects]="ownedObjects"
           ></app-overview>
@@ -49,7 +49,7 @@
         <mat-tab label="DETAILS">
           <app-details
             *ngIf="serverInfoLoaded"
-            [svc]="inferenceService"
+            [inferenceService]="inferenceService"
             [namespace]="namespace"
           ></app-details>
         </mat-tab>
@@ -62,17 +62,17 @@
         </mat-tab>
         <mat-tab label="LOGS">
           <ng-template matTabContent>
-            <app-logs [svc]="inferenceService"></app-logs>
+            <app-logs [inferenceService]="inferenceService"></app-logs>
           </ng-template>
         </mat-tab>
         <mat-tab label="EVENTS">
           <ng-template matTabContent>
-            <app-events [svc]="inferenceService"></app-events>
+            <app-events [inferenceService]="inferenceService"></app-events>
           </ng-template>
         </mat-tab>
         <mat-tab label="YAML">
           <ng-template matTabContent>
-            <app-yamls [svc]="inferenceService"></app-yamls>
+            <app-yamls [inferenceService]="inferenceService"></app-yamls>
           </ng-template>
         </mat-tab>
       </mat-tab-group>
