refactor: clarify frontend inference naming
Signed-off-by: Hijanhv <janhavichavada11@gmail.com>

--- a/frontend/src/app/pages/server-info/overview/overview.component.html
+++ b/frontend/src/app/pages/server-info/overview/overview.component.html
@@ -39,30 +39,30 @@
 </lib-details-list-item>
 
 <lib-conditions-table
-  *ngIf="svc?.status"
-  [conditions]="svc.status?.conditions"
+  *ngIf="inferenceService?.status"
+  [conditions]="inferenceService.status?.conditions"
   title="InferenceService Conditions"
   class="negative-margin page-padding"
 ></lib-conditions-table>
 
-<lib-advanced-options text="Components status" *ngIf="svc?.status">
+<lib-advanced-options text="Components status" *ngIf="inferenceService?.status">
   <app-serving-component-overview
     componentName="predictor"
     [ownedObjs]="ownedObjects?.predictor"
-    [status]="svc?.status?.components?.predictor"
+    [status]="inferenceService?.status?.components?.predictor"
   ></app-serving-component-overview>
 
   <app-serving-component-overview
-    *ngIf="svc?.status?.components?.transformer"
+    *ngIf="inferenceService?.status?.components?.transformer"
     componentName="transformer"
     [ownedObjs]="ownedObjects?.transformer"
-    [status]="svc?.status?.components?.transformer"
+    [status]="inferenceService?.status?.components?.transformer"
   ></app-serving-component-overview>
 
   <app-serving-component-overview
-    *ngIf="svc?.status?.components?.explainer"
+    *ngIf="inferenceService?.status?.components?.explainer"
     componentName="explainer"
     [ownedObjs]="ownedObjects?.explainer"
-    [status]="svc?.status?.components?.explainer"
+    [status]="inferenceService?.status?.components?.explainer"
   ></app-serving-component-overview>
 </lib-advanced-options>
