--- a/frontend/src/app/pages/server-info/details/details.component.html
+++ b/frontend/src/app/pages/server-info/details/details.component.html
@@ -1,10 +1,10 @@
 <div>
   <lib-details-list-item key="Name">
-    {{ svc.metadata.name }}
+    {{ inferenceService.metadata.name }}
   </lib-details-list-item>
 
   <lib-details-list-item key="Namespace">
-    {{ svc.metadata.namespace }}
+    {{ inferenceService.metadata.namespace }}
   </lib-details-list-item>
 
   <lib-details-list-item key="URL external" [copyValue]="externalUrl">
@@ -26,33 +26,33 @@
   </lib-details-list-item>
 
   <lib-details-list-item key="Created">
-    <lib-date-time [date]="svc?.metadata?.creationTimestamp"></lib-date-time>
+    <lib-date-time [date]="inferenceService?.metadata?.creationTimestamp"></lib-date-time>
   </lib-details-list-item>
 
   <!--predictor-->
   <lib-heading-row heading="Predictor:" subHeading="spec"> </lib-heading-row>
 
   <app-predictor-details
-    [predictorSpec]="svc.spec.predictor"
+    [predictorSpec]="inferenceService.spec.predictor"
     [namespace]="namespace"
   ></app-predictor-details>
 
   <!--transformer-->
-  <ng-container *ngIf="svc.spec.transformer">
+  <ng-container *ngIf="inferenceService.spec.transformer">
     <lib-heading-row heading="Transformer:" subHeading="spec">
     </lib-heading-row>
 
     <app-transformer-details
-      [transformerSpec]="svc.spec.transformer"
+      [transformerSpec]="inferenceService.spec.transformer"
     ></app-transformer-details>
   </ng-container>
 
   <!--explainer-->
-  <ng-container *ngIf="svc.spec.explainer">
+  <ng-container *ngIf="inferenceService.spec.explainer">
     <lib-heading-row heading="Explainer:" subHeading="spec"> </lib-heading-row>
 
     <app-explainer-details
-      [explainerSpec]="svc.spec.explainer"
+      [explainerSpec]="inferenceService.spec.explainer"
     ></app-explainer-details>
   </ng-container>
 </div>
