style: apply prettier formatting
Signed-off-by: Hijanhv <janhavichavada11@gmail.com>

--- a/frontend/src/app/pages/server-info/details/details.component.html
+++ b/frontend/src/app/pages/server-info/details/details.component.html
@@ -26,7 +26,9 @@
   </lib-details-list-item>
 
   <lib-details-list-item key="Created">
-    <lib-date-time [date]="inferenceService?.metadata?.creationTimestamp"></lib-date-time>
+    <lib-date-time
+      [date]="inferenceService?.metadata?.creationTimestamp"
+    ></lib-date-time>
   </lib-details-list-item>
 
   <!--predictor-->
