--- a/frontend/src/app/pages/inference-graph/graph-info/graph-info.component.scss
+++ b/frontend/src/app/pages/inference-graph/graph-info/graph-info.component.scss
@@ -159,8 +159,6 @@
   }
 }
 
-
-
 .page-placement {
   flex: 1;
   display: flex;
@@ -197,7 +195,8 @@
   background: #f8f9fa;
   padding: 20px;
   border-radius: 4px;
-  font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro', monospace;
+  font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', 'Consolas', 'source-code-pro',
+    monospace;
   font-size: 14px;
   line-height: 1.8;
   color: #2d2d2d;
